removed shopping cart and wishlists tab

--- a/src/Presentation/Nop.Web/Areas/Admin/sitemap.config
+++ b/src/Presentation/Nop.Web/Areas/Admin/sitemap.config
@@ -20,7 +20,7 @@
       <siteMapNode SystemName="Return requests" nopResource="Admin.ReturnRequests" PermissionNames="ManageReturnRequests" controller="ReturnRequest" action="List"  IconClass="far fa-dot-circle"/>
       <siteMapNode SystemName="Recurring payments" nopResource="Admin.RecurringPayments" PermissionNames="ManageRecurringPayments" controller="RecurringPayment" action="List"  IconClass="far fa-dot-circle"/>
       <siteMapNode SystemName="Gift cards" nopResource="Admin.GiftCards" PermissionNames="ManageGiftCards" controller="GiftCard" action="List"  IconClass="far fa-dot-circle"/>
-      <siteMapNode SystemName="Current shopping carts and wishlists" nopResource="Admin.CurrentCarts.CartsAndWishlists" PermissionNames="ManageCurrentCarts" controller="ShoppingCart" action="CurrentCarts"  IconClass="far fa-dot-circle"/>      
+      <!-- <siteMapNode SystemName="Current shopping carts and wishlists" nopResource="Admin.CurrentCarts.CartsAndWishlists" PermissionNames="ManageCurrentCarts" controller="ShoppingCart" action="CurrentCarts"  IconClass="far fa-dot-circle"/>       -->
     </siteMapNode>
     <siteMapNode SystemName="Customers" nopResource="Admin.Customers" PermissionNames="ManageCustomers, ManageVendors, ManageActivityLog" IconClass="far fa-user" >
       <siteMapNode SystemName="Customers list" nopResource="Admin.Customers.Customers" PermissionNames="ManageCustomers" controller="Customer" action="List" IconClass="far fa-dot-circle" />
